# zink

./: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tree_structure.txt  tsconfig.json
.github/workflows/: eas-build.yml  pr-checks.yml
.trunk/: trunk.yaml
android/: settings.gradle
android/app/: build.gradle
app/: _layout.tsx  index.tsx  manual-entry.tsx  mrz.tsx  nfc.tsx  passport-choice.tsx  proof.tsx  saved-passport.tsx
app/(tabs)/: index.tsx
assets/csca/: masterList.pem
assets/noir/: poseidon-example.json  zink.json
components/: passport-data.tsx
components/utils/: proverInputs.ts
eas-hooks/: 01-install-rust-tools.sh  02-run-bindings-script.sh
ios/: Podfile
ios/zink/: Info.plist
ios/zink.xcodeproj/: project.pbxproj
modules/mrz-reader/: expo-module.config.json  index.ts  package.json
modules/mrz-reader/android/: build.gradle
modules/mrz-reader/ios/: MrzReader.podspec  MrzReaderModule.swift  MrzReaderView.swift
modules/mrz-reader/src/: MrzReader.types.ts  MrzReaderModule.ts  MrzReaderModule.web.ts  MrzReaderView.tsx  MrzReaderView.web.tsx
modules/nfc-reader/: expo-module.config.json  package-lock.json  package.json  tsconfig.json
modules/nfc-reader/android/: build.gradle
modules/nfc-reader/ios/: NfcReader.podspec  NfcReaderModule.swift
modules/nfc-reader/src/: NfcReader.types.ts  NfcReaderModule.ts  NfcReaderModule.web.ts  index.ts
modules/zk-bindings/: expo-module.config.json  index.ts  package.json
native_rust/: Cargo.toml  rustfmt.toml
native_rust/bindgen/: Cargo.toml
native_rust/src/: lib.rs  math.udl
noir/: Nargo.toml
noir/src/: main.nr
plugins/: withBcprovExclusion.js
scripts/: build-rust.mjs  pre-push.sh  setup_rust_bindings.mjs
zink-rust-lib/: Cargo.toml  build.rs
zink-rust-lib/.cargo/: config.toml
zink-rust-lib/src/: lib.rs  zink_interface.udl
(+24 files in other folders)
