[package]
name = "native_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
acvm = { git = "https://github.com/noir-lang/noir.git", package = "acvm", rev = "v1.0.0-beta.3" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", package = "bn254_blackbox_solver", rev = "v1.0.0-beta.3" }
nargo = { git = "https://github.com/noir-lang/noir.git", package = "nargo", rev = "v1.0.0-beta.3" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", package = "noirc_abi", rev = "v1.0.0-beta.3" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir.git", package = "noirc_artifacts", rev = "v1.0.0-beta.3" }

noir-r1cs = { git = "https://github.com/worldfnd/ProveKit", package = "noir-r1cs"}

serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
uniffi = {version = "0.29", features = ["cli"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[workspace]
members = ["bindgen"]
