[package]
name = "zink_rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "zink_rust_lib"
crate-type = ["staticlib", "cdylib"] # staticlib for iOS, cdylib for Android

[dependencies]
rand = "0.8"
uniffi = { version = "0.29", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29", features = [ "build" ] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
